# ngio

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  _typos.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup_data.sh  sitemap.xml  versions.json
.github/: ISSUE_TEMPLATE.md
.github/actions/download_data/: action.yml
.github/scripts/: download_data.py  download_data.sh
.github/workflows/: build_docs.yml  ci.yml  download_data.yml  v3_ci.yml
api/core/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/api/common/: index.html
dev/api/core/: index.html
dev/api/hcs/: index.html
dev/api/images/: index.html
dev/api/ngio/: index.html
dev/api/ome_zarr_container/: index.html
dev/api/tables/: index.html
dev/api/utils/: index.html
dev/changelog/: index.html
dev/code_of_conduct/: index.html
dev/contributing/: index.html
dev/getting-started/: index.html
dev/getting_started/0_quickstart/: index.html
dev/getting_started/1_ome_zarr_containers/: index.html
dev/getting_started/2_images/: index.html
dev/getting_started/3_tables/: index.html
dev/getting_started/4_masked_images/: index.html
dev/getting_started/5_hcs/: index.html
dev/notebooks/basic_usage/: index.html
dev/notebooks/image/: index.html
dev/notebooks/processing/: index.html
dev/search/: search_index.json
dev/table_specs/backend/: index.html
dev/table_specs/overview/: index.html
dev/tutorials/create_ome_zarr/: index.html
dev/tutorials/feature_extraction/: index.html
dev/tutorials/hcs_exploration/: index.html
dev/tutorials/hcs_processing/: index.html
dev/tutorials/image_processing/: index.html
dev/tutorials/image_segmentation/: index.html
docs/: changelog.md  code_of_conduct.md  contributing.md  getting-started.md  index.md
docs/api/: common.md  core.md  hcs.md  images.md  ngio.md  ome_zarr_container.md  tables.md
docs/api/ngio/: common.md  hcs.md  images.md  ngio.md  tables.md  utils.md
docs/getting_started/: 0_quickstart.md  1_ome_zarr_containers.md  2_images.md  3_tables.md  4_masked_images.md  5_hcs.md
docs/notebooks/: basic_usage.ipynb  image.ipynb  processing.ipynb  quickstart.ipynb
docs/table_specs/: backend.md  overview.md
docs/table_specs/table_types/: condition_table.md  custom_table.md  feature_table.md  generic_table.md  masking_roi_table.md  roi_table.md
docs/tutorials/: create_ome_zarr.ipynb  feature_extraction.ipynb  hcs_exploration.ipynb  hcs_processing.ipynb  image_processing.ipynb  image_segmentation.ipynb
getting-started/: index.html
notebooks/basic_usage/: index.html
notebooks/image/: index.html
notebooks/processing/: index.html
search/: search_index.json
src/ngio/: __init__.py  multiscale_handlers.py  ngff_image.py  pydantic_utils.py  table_handlers.py
src/ngio/common/: __init__.py  _logger.py  (+13 more)
tests/: conftest.py
tests/core/: conftest.py  test_image_handler.py  test_image_like_handler.py  test_label_handler.py  test_ngff_image.py  test_ngff_image_like.py  test_roi.py
tests/io/: conftest.py  test_zarr_group_utils.py
tests/ngff_meta/: conftest.py  test_fractal_image_meta.py  test_pixel_size.py  test_utils.py  test_v04.py
tests/pipes/: conftest.py  test_zoom.py
tests/tables/: conftest.py  test_table_conversion.py  test_table_group.py  test_v1_tables.py  test_validation.py
tests/unit/: test_unit_ome_zarr_meta.py
tests/utils/: test_download_datasets.py
v0.2.0/: 404.html  index.html  sitemap.xml
v0.2.0/code_of_conduct/: index.html
v0.2.0/contributing/: index.html
v0.2.0/search/: search_index.json
v0.2.1/: 404.html  index.html  sitemap.xml
v0.2.1/code_of_conduct/: index.html
v0.2.1/contributing/: index.html
v0.2.1/search/: search_index.json
v0.2.10/: 404.html  index.html  sitemap.xml
v0.2.10/code_of_conduct/: index.html
v0.2.10/contributing/: index.html
v0.2.10/search/: search_index.json
v0.2.2/: 404.html  index.html  sitemap.xml
v0.2.2/code_of_conduct/: index.html
v0.2.2/contributing/: index.html
v0.2.2/search/: search_index.json
v0.2.3/: 404.html  index.html  sitemap.xml
v0.2.3/code_of_conduct/: index.html
v0.2.3/contributing/: index.html
v0.2.3/search/: search_index.json
v0.2.4/: 404.html  index.html  sitemap.xml
v0.2.4/code_of_conduct/: index.html
v0.2.4/contributing/: index.html
v0.2.4/search/: search_index.json
v0.2.5/: 404.html  index.html  sitemap.xml
v0.2.5/code_of_conduct/: index.html
v0.2.5/contributing/: index.html
v0.2.5/search/: search_index.json
v0.2.6/: 404.html  index.html  sitemap.xml
v0.2.6/code_of_conduct/: index.html
v0.2.6/contributing/: index.html
v0.2.6/search/: search_index.json
v0.2.7/: 404.html  index.html  sitemap.xml
v0.2.7/code_of_conduct/: index.html
v0.2.7/contributing/: index.html
v0.2.7/search/: search_index.json
v0.2.8/: 404.html  index.html  sitemap.xml
v0.2.8/code_of_conduct/: index.html
v0.2.8/contributing/: index.html
v0.2.8/search/: search_index.json
v0.2.9/: 404.html  index.html  sitemap.xml
v0.2.9/code_of_conduct/: index.html
v0.2.9/contributing/: index.html
v0.2.9/search/: search_index.json
v0.3.0/: 404.html  index.html  sitemap.xml
v0.3.0/changelog/: index.html
v0.3.0/code_of_conduct/: index.html
v0.3.0/contributing/: index.html
v0.3.0/search/: search_index.json
v0.3.1/: 404.html  index.html  sitemap.xml
v0.3.1/changelog/: index.html
v0.3.1/code_of_conduct/: index.html
v0.3.1/contributing/: index.html
v0.3.1/search/: search_index.json
v0.3.2/: 404.html  index.html  sitemap.xml
v0.3.2/changelog/: index.html
v0.3.2/code_of_conduct/: index.html
v0.3.2/contributing/: index.html
v0.3.2/search/: search_index.json
v0.3.3/: 404.html  index.html  sitemap.xml
v0.3.3/changelog/: index.html
v0.3.3/code_of_conduct/: index.html
v0.3.3/contributing/: index.html
v0.3.3/search/: search_index.json
v0.3.4/: 404.html  index.html  sitemap.xml
v0.3.4/changelog/: index.html
v0.3.4/code_of_conduct/: index.html
v0.3.4/contributing/: index.html
v0.3.4/search/: search_index.json
(+515 files in other folders)
